// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CardContentYotpoReviewTopics/> render() should render children as a list of pills 1`] = `
<div
  class="topTopicsContainer"
>
  <span
    class="container"
  >
    <span
      class="label"
    >
      <span
        class="material-icons favorite"
      >
        favorite
      </span>
      Top Mentioned Topics
    </span>
  </span>
  <span
    class="topics"
  >
    <div
      class="ui-badge-badge-7025 topic ui-badge-uppercase-7025"
      data-name="badge"
      style="border-radius: 100px;"
    >
      bread
    </div>
    <div
      class="ui-badge-badge-7025 topic ui-badge-uppercase-7025"
      data-name="badge"
      style="border-radius: 100px;"
    >
      test
    </div>
  </span>
</div>
`;

exports[`<CardContentYotpoReviewTopics/> render() should render correctly if children is empty/null 1`] = `
<div
  class="topTopicsContainer"
>
  <span
    class="container"
  >
    <span
      class="label"
    >
      <span
        class="material-icons favorite"
      >
        favorite
      </span>
      Top Mentioned Topics
    </span>
  </span>
  <span
    class="topics"
  />
</div>
`;

exports[`<CardContentYotpoReviewTopics/> render() should render correctly if children is empty/null 2`] = `
<div
  class="topTopicsContainer"
>
  <span
    class="container"
  >
    <span
      class="label"
    >
      <span
        class="material-icons favorite"
      >
        favorite
      </span>
      Top Mentioned Topics
    </span>
  </span>
  <span
    class="topics"
  />
</div>
`;

exports[`<CardContentYotpoReviewTopics/> render() should render correctly if children is empty/null 3`] = `
<div
  class="topTopicsContainer"
>
  <span
    class="container"
  >
    <span
      class="label"
    >
      <span
        class="material-icons favorite"
      >
        favorite
      </span>
      Top Mentioned Topics
    </span>
  </span>
  <span
    class="topics"
  />
</div>
`;
